fix: removed position fixed and z-index for header

--- a/src/app/components/shared/cb-header/cb-header.component.scss
+++ b/src/app/components/shared/cb-header/cb-header.component.scss
@@ -14,7 +14,7 @@
 
 .hero-head {
   width: 100%;
-  position: fixed; // todo: change header styling
-  z-index: 1500;
+  //position: fixed; // todo: change header styling
+  //z-index: 1500;
 }
 
